; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_emit_logand.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_emit_logand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SAVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"test #rax, #rax\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"mov $0, #rax\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"je %s\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"mov $1, #rax\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @emit_logand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_logand(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32, i32* @SAVE, align 4
  %5 = call i8* (...) @make_label()
  store i8* %5, i8** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @emit_expr(i32 %8)
  %10 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* %12)
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @emit_expr(i32 %16)
  %18 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* %20)
  %22 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0))
  %23 = load i8*, i8** %3, align 8
  %24 = call i32 @emit_label(i8* %23)
  ret void
}

declare dso_local i8* @make_label(...) #1

declare dso_local i32 @emit_expr(i32) #1

declare dso_local i32 @emit(i8*, ...) #1

declare dso_local i32 @emit_label(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
